--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
     - '**.csproj'
     - '*/package.json'
     - '*/packages.config'
-    - '/.github/workflows/**'
+    - '.github/workflows/**'
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
