--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,5 +45,6 @@ jobs:
           message: 'Autobuild commit ${{ steps.time.outputs.time }}'
   release:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/checkout@v1
