--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,3 +52,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: 'master'
+          
+      - name: Create release branch
+        run: .github/workflows/release.sh
+        shell: bash
