--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: 'master'
+          fetch-depth: 0
           
       - name: Create release branch
         run: |
